# AgentSim

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
agentsim/: __init__.py  agent.py  inference_engine.py  workspace.py
examples/: demo.py
tests/: __init__.py  test_agent.py  test_inference_engine.py  test_workspace.py
